<resources>
    <string name="app_name">CapstoneProject</string>
    <string name="password_hint">Password</string>
    <string name="login_txt">Login</string>

    <!-- String Array for Navigation Drawer Items -->

    <string name="sign_up">Sign Up</string>
    <string name="not_user">Not User?</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logo_of_application">Logo Of Application</string>
    <string name="lorem_text">Lorem Text</string>
    <string name="image_for_item_in_the_list">Image for item in the List</string>
    <string name="title_activity_hotels">Movies Activity</string>
    <string name="title_activity_restaurant">RestaurantActivity</string>
    <string name="title_activity_hotel_details">Movie Details</string>
    <string name="title_activity_restaurants_details">Restaurants Details</string>
    <string name="title_activity_home">Home Activity</string>
    <string name="restaurants">Restaurants</string>
    <string name="movies">Movies</string>
    <string name="price_range">Price Range For 2 pieces </string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="hotel_name">Movie Name</string>
    <string name="restaurant_name">Restaurant Name</string>

    <string name="rating">Rating</string>
    <string name="synopsis">Synopsis</string>

    <string name="back_drop_image_for_film">back drop image for film</string>
    <string name="poster_image_for_film">Poster Image for Film</string>
    <string name="release_date">Release Date</string>
    <string name="to_do">To Do List</string>
    <string name="title_activity_to_do">ToDoActivity</string>
    <string name="preference_file_key">sharefPrefValues</string>
    <string name="movie_name">Movie Name</string>
    <string name="add_to_do">Save</string>
    <string name="add_to_my_list">add to my List</string>
    <string name="cancel">Cancel</string>
    <string name="icon_for_location">icon for location</string>
    <string name="email_error">Email can\'t be empty</string>
    <string name="email_inValid">inValid Email</string>
    <string name="format">%s %s</string>
    <string name="password_empty">Password can\'t be empty</string>
    <string name="password_rule">Password must be at least 6 chars</string>
    <string name="auth_process">Authentication Process</string>
    <string name="wait_str">Please wait …</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="login_failed">Login Failed</string>
    <string name="invalid_login_item">Incorrect Email or Password</string>
    <string name="empty_str" />
    <string name="success_load">Ad Loaded Successful</string>
    <string name="failed_load">Failed To Load Ad</string>
    <string name="ad_key">ca-app-pub-3940256099942544~3347511713</string>
    <string name="mismatch_password">Password does not match the confirm password</string>
    <string name="pass_confirm">Password Conformation can\'t be empty</string>
    <string name="error_field">Valid error Fields</string>
    <string name="hint_tofix">please fix error in fields</string>
    <string name="signing_up">Signing Up</string>
    <string name="save_data">Save data to server</string>
    <string name="sign_up_success">Sign Up Success</string>
    <string name="sign_up_failed">Sign Up Failed.</string>
    <string name="msg">messages</string>
    <string name="film_key_shared">film_name</string>
    <string name="film_key_pass">movie_item</string>
    <string name="img_load_URL">http://image.tmdb.org/t/p/w185</string>
    <string name="rest_name">rest_name</string>
    <string name="rest_item">rest_item</string>
    <string name="missing_data">No saved Value</string>
    <string name="loading_movies">Loading List of Movies</string>
    <string name="loading_movies_hint">getting Movies from server</string>
    <string name="film_name">film_name</string>
    <string name="api_URL">http://api.themoviedb.org/3/</string>
    <string name="api_key_movies">50afdb8a06eb4f5d7320f4f4729a993e</string>
    <string name="error_messages">Error Please Try again</string>
    <string name="zomata_URL">https://developers.zomato.com/api/v2.1/</string>
    <string name="app_type">application/json</string>
    <string name="zomato_key">55a1d18014dd0c0dac534c02598a3368</string>
    <string name="load_rest_detail">getting restaurants from server</string>
    <string name="load_rest">Loading List of Restaurants</string>
    <string name="popular_rest">The most populous Restaurant.</string>
    <string name="movie_backdrop_URL">http://image.tmdb.org/t/p/w185</string>
    <string name="save_data_">Save data</string>
    <string name="text_empty">Text can\'t be empty</string>

</resources>
